tester_ft/log/compile_error_vec_7.txt
-VECTOR RESIZE TEST-

./tmp/outfile_vec_7.cpp:33:42: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1.begin(),v1.end(),v2.begin()))
                                                    ~~ ^
In file included from ./tmp/outfile_vec_7.cpp:4:
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:137:12: error: no member named 'insert' in 'ft::vector<int>'
                                        this->insert(this->end(), n - this->size(), val);
                                        ~~~~  ^
./tmp/outfile_vec_7.cpp:28:6: note: in instantiation of member function 'ft::vector<int>::resize' requested here
                v2.resize(resize_n);
                   ^
2 errors generated.
